<resources>
    <string name="app_name">Lay Ao</string>

    <!-- Bottom menu Labels -->
    <string name="title_home">Home</string>
    <string name="title_categories">Categories</string>
    <string name="title_cart">Cart</string>
    <string name="title_user">You</string>
    <string name="title_order">Orders</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_user_information">Edit Information</string>
    <string name="title_banner_detail">Details</string>
    <string name="title_activity_maps">Select Location</string>

    <!-- General menu labels -->
    <string name="title_list">Lists</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_info">Info</string>
    <string name="title_delete">Delete</string>

    <!-- Wapda Town Blocks -->
    <string-array name="blocks">
        <item>Select Block</item>
        <item>Block D2</item>
        <item>Block D3</item>
        <item>Block E1</item>
        <item>Block E2</item>
        <item>Block F1</item>
        <item>Block F2</item>
        <item>Block G1</item>
        <item>Block G2</item>
        <item>Block G3</item>
        <item>Block G4</item>
        <item>Block G5</item>
        <item>Block H1</item>
        <item>Block H2</item>
        <item>Block H3</item>
        <item>Block H4</item>
        <item>Block J1</item>
        <item>Block J2</item>
        <item>Block J3</item>
        <item>Block K1</item>
        <item>Block K2</item>
        <item>Block K3</item>
        <item>Block M</item>
        <item>Block N1</item>
        <item>Block N2</item>
        <item>Block N3</item>
        <item>Block P1</item>
        <item>Block P2</item>
        <item>Block P3</item>
        <item>Block Q1</item>
        <item>Block Q2</item>
        <item>Block R</item>
    </string-array>

    <string-array name="gender">
        <item>Not comfortable telling</item>
        <item>Female</item>
        <item>Male</item>
        <item>Super Human</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">Order History</string>
    <string name="view_all"><u>View All</u></string>
    <string name="title_search">Search</string>
    <string name="click_for_more_details">Click for more details</string>
    <string name="per_kg">Per kg:</string>
    <string name="quantity">Quantity:</string>
    <string name="brand">Brand:</string>
    <string name="discount">Discount:</string>
    <string name="sub_total">Sub Total:</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="email_address">Email Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="contact">Contact</string>
    <string name="gender">Gender</string>
    <string name="wallet_amount">Wallet Amount</string>
    <string name="description">Description</string>
    <string name="copy_promo_code">(Click to Copy Promo Code)</string>
    <string name="all_brands">All Brands</string>
    <string name="grand_total">Grand Total</string>
    <string name="total_items">Total Items</string>
    <string name="cart_items">Cart Items</string>
    <string name="empty_cart">Cart is empty</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="cart_total">Cart Total</string>
    <string name="gst_information">GST included within the amount</string>
    <string name="delivery_information">Delivery Information</string>
    <string name="name">Full Name</string>
    <string name="house_number">House No.</string>
    <string name="comments_optional">Comments (Optional)</string>
    <string name="place_order">Place Order</string>
    <string name="retrieve_user_data">Retrieve Info</string>
    <string name="edit">Edit</string>
    <string name="add_items_to_cart">Go Shopping</string>
    <string name="delete_all_items">Delete all items</string>
    <string name="delete_all_items_desc">All items will be deleted from your cart. Do you want to proceed?</string>
    <string name="login_to_see_favorites">Login to see Favorites</string>
    <string name="login_to_see_orders">Login to see Orders</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_password">Change Password</string>
    <string name="app_slogan">Groceries at your doorstep</string>
    <string name="create_an_account">Create an Account</string>
    <string name="sign_in">Sign In</string>
    <string name="auth_slogan">The fastest Grocery Delivery System in Pakistan</string>
    <string name="auth_title">Join the Lay Ao family</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="order_cancelling_desc">Cancelling an order will charge Rs. 30 if the driver is on the way.</string>
    <string name="fine_count_desc">Cannot Place Order Due to FINE COUNT limit. Call at +92XXX123ABCD (HELPLINE) for resolving error.</string>
    <string name="no_orders_placed_yet">No Orders Placed Yet!</string>
    <string name="empty_order_attraction">Buy something?</string>
    <string name="product_image">Product Image</string>
    <string name="add_to_cart">add to cart</string>
    <string name="similar_products">Similar Products</string>
    <string name="category_image">Category Image</string>
    <string name="delivery_services_msg">OUR DELIVERY SERVICES ARE ONLY AVAILABLE IN <b>WADPA TOWN PHASE I &amp; II</b>, LAHORE</string>
    <string name="delivery_charges_message">Order less than <b>Rs. 1000</b> will charge <b>Rs. 50</b> for delivery.</string>
    <string name="address_placeholder">Wapda Town, Lahore, Punjab, Pakistan</string>
    <string name="select_gender">Select Gender</string>
    <string name="offer_zone">Offer Zone</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="shop_by_brands">SHOP BY BRANDS</string>
    <string name="email_is_not_verified">Email is not Verified</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_and_condition_label">You accept our Terms and Conditions</string>
    <string name="just_one_more_step">Just one more step</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="complete_registration">Complete Registration</string>
    <string name="login_long_msg">Already have an account? Log in</string>
    <string name="edit_info">Edit Info</string>
    <string name="see_all">See All</string>
    <string name="schedule_orders">Scheduling orders</string>
    <string name="active_service">Service is active</string>
    <string name="tomorrow_schedule">Order scheduled for tomorrow</string>
    <string name="order_was_scheduled">Order was scheduled</string>
    <string name="cancel_order_msg">Order can be cancelled only when your order is being processed.</string>
    <string name="user_collision_msg">User already exists. Try logging in</string>
    <string name="reorder">Reorder</string>
    <string name="title_no_wifi">No Internet Connection</string>
    <string name="network_error_msg">Network not available</string>
    <string name="no_favs">No Favorites Added Yet</string>
    <string name="loading">Loading...</string>
    <string name="tac_fragment_label">Terms and Conditions</string>


</resources>
