<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.designbyark.layao.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_bannerDetailFragment"
            app:destination="@id/bannerDetailFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/fragment_open_enter"
            app:popExitAnim="@anim/fragment_open_exit" />
        <action
            android:id="@+id/action_navigation_home_to_productDetailFragment"
            app:destination="@id/productDetailFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/fragment_open_enter"
            app:popExitAnim="@anim/fragment_open_exit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.designbyark.layao.ui.categories.CategoriesFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.designbyark.layao.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.designbyark.layao.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />
    <fragment
        android:id="@+id/bannerDetailFragment"
        android:name="com.designbyark.layao.BannerDetailFragment"
        android:label="fragment_banner_detail"
        tools:layout="@layout/fragment_banner_detail" />
    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.designbyark.layao.ProductDetailFragment"
        android:label="fragment_product_detail"
        tools:layout="@layout/fragment_product_detail" />
</navigation>