<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_authentication"
            android:layout_gravity="center"
            android:contentDescription="@string/login_to_see_favorites" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_see_favorites"
            android:textAllCaps="true"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/hind_bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="1dp"
                android:id="@+id/mLoginAuth"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/white"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/colorTextPrimary"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>

            <Button
                android:id="@+id/mRegisterAuth"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:fontFamily="@font/open_sans"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_gravity="center"/>

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>